--- a/.github/workflows/eslint-action.yml
+++ b/.github/workflows/eslint-action.yml
@@ -1,7 +1,19 @@
 name: Run eslint with reviewdog
-on: [push]
+
+on:
+  push:
+    branches: [master]
+  pull_request:
+    branches: [master]
+
 jobs:
-  Run-Eslint-Check:
+  build:
     runs-on: ubuntu-latest
+
     steps:
       - uses: reviewdog/action-eslint@v1.33.0
+      - uses: actions/setup-node@v4
+        with:
+          node_version: 22
+      - run: npm ci
+
