--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,4 +1,4 @@
-name: Run eslint with reviewdog
+name: ESLint check
 
 on:
   push:
@@ -11,6 +11,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - uses: actions/checkout@v4
       - uses: reviewdog/action-eslint@v1.33.0
       - uses: actions/setup-node@v4
         with:
